# orbbec_camera_splitter

./: CMakeLists.txt  package.xml
include/orbbec_camera_splitter/: orbbec_camera_splitter_node.hpp
src/: orbbec_camera_splitter_node.cpp  orbbec_camera_splitter_node_main.cpp
